<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Turtles Time Trials</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_enter_swimmers">Enter Swimmers</string>
    <string name="enter_swimmers_text">Please enter the swimmers in their appropriate lane in the order they will be starting</string>
    <string name="lane1_text">Lane 1</string>
    <string name="lane2_text">Lane 2</string>
    <string name="lane3_text">Lane 3</string>
    <string name="next_button">Next</string>
    <string name="title_activity_activity_swim_set">Swim Set</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_set_info">Set Info</string>
    <string name="number_of_swims">Enter the number of swims</string>
    <string name="time_between_heats">Enter the time in seconds between heats</string>
    <string name="heats_hint">Number of swims</string>
    <string name="pause_hint">Time between heats</string>
    <string name="title_activity_intervals">Intervals</string>
    <string name="intervals_same">Are all the intervals the same?</string>
    <string name="start">Start</string>
    <string name="title_activity_logging">Logging</string>
    <string name="title_activity_spreadsheet">Spreadsheet</string>

</resources>
