<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ironhawk.dimyr7.turtlestimetrials.set_info"
    android:orientation="vertical"
    android:id="@+id/linlayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/number_of_swims"
        android:id="@+id/set_info1"
        android:textSize="30dp"
        android:textAlignment="center"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/heats"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:hint="@string/heats_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time_between_heats"
        android:id="@+id/set_info2"
        android:textSize="30dp"
        android:textAlignment="center"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/pause"
        android:textAlignment="center"
        android:hint="@string/pause_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:id="@+id/next_button2"
        android:background="#19bf30"
        android:layout_gravity="right"
        android:textAlignment="center" />
</LinearLayout>
