<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ironhawk.dimyr7.turtlestimetrials.logging"
    android:id="@+id/logging_relative"
    android:orientation="vertical">

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/lane3_text"
        android:id="@+id/logging_lane3"
        android:background="#ff147520"
        android:textAlignment="center"
        android:layout_gravity="left"
        android:layout_alignParentTop="false"
        android:layout_alignParentStart="false" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/lane2_text"
        android:id="@+id/logging_lane2"
        android:background="#19bf30"
        android:textAlignment="center"
        android:layout_gravity="left"

        android:layout_alignParentStart="false" />

    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/lane1_text"
        android:id="@+id/logging_lane1"
        android:background="#ff147520"
        android:textAlignment="center"
        android:layout_gravity="left"
        android:layout_alignParentStart="true" />

    <GridView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/gridView"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
